rename manifest references to image
