# docs/generated/swagger/swagger.json
@@ -141,12 +141,12 @@
                 }
             }
         },
-        "/api/v1/applications/{id}/active_manifest": {
+        "/api/v1/applications/{id}/active_image": {
             "patch": {
                 "tags": [
                     "Application"
                 ],
-                "summary": "更新应用的 Active Manifest",
+                "summary": "更新应用的 Active Image",
                 "parameters": [
                     {
                         "type": "string",
@@ -156,7 +156,7 @@
                         "required": true
                     },
                     {
-                        "description": "Active Manifest Data",
+                        "description": "Active Image Data",
                         "name": "data",
                         "in": "body",
                         "required": true,
@@ -348,10 +348,10 @@
         "api.UpdateActiveManifestRequest": {
             "type": "object",
             "required": [
-                "manifest_id"
+                "image_id"
             ],
             "properties": {
-                "manifest_id": {
+                "image_id": {
                     "type": "string"
                 }
             }
@@ -370,10 +370,10 @@
         "model.Application": {
             "type": "object",
             "properties": {
-                "active_manifest_id": {
+                "active_image_id": {
                     "type": "string"
                 },
-                "active_manifest_name": {
+                "active_image_name": {
                     "type": "string"
                 },
                 "config_maps": {
