# pkg/router/application.go
@@ -13,7 +13,7 @@ func registerApplicationGroup(rg *gin.RouterGroup) *gin.RouterGroup {
 	app.POST("", api.ApplicationRouteApi.Create)
 	app.PUT("/:id", api.ApplicationRouteApi.Update)
 	app.DELETE("/:id", api.ApplicationRouteApi.Delete)
-	app.PATCH("/:id/active_manifest", api.ApplicationRouteApi.UpdateActiveManifest)
+	app.PATCH("/:id/active_image", api.ApplicationRouteApi.UpdateActiveImage)
 
 	return app
 }
